2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* IUndoable.cs:
	* PasteCommand.cs:
	* DeleteCommand.cs:
	* UndoableAdapter.cs:
	* SelectAllCommand.cs:
	* FigureTransferCommand.cs:
	* ChangeAttributeCommand.cs: Affected Figures is now
	IEnumerable<IFigure>

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* UndoableAdapter.cs: Updated some properties to Automatic
	Properties of C# 3

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* CutCommand.cs:
	* CopyCommand.cs:
	* DeleteCommand.cs:
	* UndoableAdapter.cs:
	* DuplicateCommand.cs:
	* SelectAllCommand.cs:
	* SendToBackCommand.cs:
	* BringToFrontCommand.cs:
	* ChangeAttributeCommand.cs: Changed references to
	FromEnumerator
